# spike-prover

./: .project  Introduction.md  Makefile  Makefile.coq  ProjectHome.md  README  _CoqProject  config.sh  dune-project
CoLoR/Coq8.10/: .AccUtil.aux  .BoolUtil.aux  .ListPermutation.aux  .MultisetList.aux  .MultisetNat.aux  .MultisetTheory.aux  .RelExtras.aux  .nia.cache  AccUtil.vo  BoolUtil.vo  EqUtil.glob  ListExtras.vo  ListPermutation.vo  LogicUtil.glob  MultisetList.vo  MultisetListOrder.v.d  MultisetOrder.glob
CoLoR/Coq8.11/: .AccUtil.aux  .BoolUtil.aux  .EqUtil.aux  .ListExtras.aux  .ListPermutation.aux  (+21 more)
Coccinelle/: Makefile  build_make
_build/: .db  .digest-db  .to-delete-in-source-tree  log
null/: auto_simplification.ml  auto_simplification.mli  complement.mli  context.ml  contextual_rewriting.ml  coq.mli  decomposition_set.ml  extract.mli  generate_eq.ml  lexer.mll  literals.ml  literals.mli  pi.ml  polynoms.ml  symbols.ml  terms.ml  terms.mli  test_sets.ml  values.mli
sources/: .merlin  Makefile  README  TAGS  _tags  augment.ml  auto_simplification.ml  case_rewriting.ml  clauses.ml  clauses.mli  complement.ml  context.ml  contextual_rewriting.ml  coq.ml  critical_context_set.ml  decomposition_set.ml  delete_set.ml  delete_set.mli  dicos.ml  diverse.ml  dummies.ml  dune  eliminate_set.ml  extract.ml  generate_eq.ml  induction.ml  induction_obs.ml  io.mli  lexer.mll  literals.ml  literals.mli  max.ml  min.ml  natlist.ml  normalize.ml  normalize.mli  npolynoms.ml  order.ml  order.mli  parser.mly  (+17 more)
trunk/: README
wiki/: Coq.wiki  Introduction.wiki
(+2112 files in other folders)
